syntax = "proto3";

option go_package = "./;pb";

// CSDataHighwayHead
message Highway {
  // C2CCommonExtendinfo
  message C2CCommonExtendinfo {
    uint32 info_id = 1; // "uint32_info_id"
    FilterExtendInfo filter_extend_info = 2; // "msg_filter_extendinfo"
  }
  // DataHighwayHead
  message BaseHead {
    uint32 version = 1; // "uint32_version"
    string uin = 2; // "bytes_uin"
    string command = 3; // "bytes_command"
    uint32 seq = 4; // "uint32_seq"
    uint32 retry_times = 5; // "uint32_retry_times"
    uint32 app_id = 6; // "uint32_appid"
    uint32 data_flag = 7; // "uint32_dataflag"
    uint32 command_id = 8; // "uint32_command_id"
    string build_version = 9; // "bytes_build_ver"
    uint32 locale_id = 10; // "locale_id"
    uint32 env_id = 11; // "env_id"
  }
  // DataHole
  message DataHole {
    uint64 begin = 1; // "uint64_begin"
    uint64 end = 2; // "uint64_end"
  }
  // FilterExtendinfo
  message FilterExtendInfo {
    uint32 filter_flag = 1; // "uint32_filter_flag"
    ImageFilterRequest image_filter_request = 2; // "msg_image_filter_request"
  }
  // FilterStyle
  message FilterStyle {
    uint32 style_id = 1; // "style_id"
    bytes style_name = 2; // "style_name"
  }
  // ImageFilterRequest
  message ImageFilterRequest {
    bytes session_id = 1; // "session_id"
    uint32 client_ip = 2; // "client_ip"
    uint64 uin = 3; // "uin"
    FilterStyle style = 4; // "style"
    uint32 width = 5; // "width"
    uint32 height = 6; // "height"
    bytes image_data = 7; // "image_data"
  }
  // ImageFilterResponse
  message ImageFilterResponse {
    int32 ret_code = 1; // "ret_code"
    bytes image_data = 2; // "image_data"
    uint32 cost_time = 3; // "cost_time"
  }
  // LoginSigHead
  message LoginSigHead {
    uint32 loginsig_type = 1; // "uint32_loginsig_type"
    bytes loginsig = 2; // "bytes_loginsig"
  }
  // NewServiceTicket
  message NewServiceTicket {
    bytes signature = 1; // "bytes_signature"
    bytes ukey = 2; // "bytes_ukey"
  }
  // PicInfoExt
  message PicInfoExt {
    uint32 pic_width = 1; // "uint32_pic_width"
    uint32 pic_height = 2; // "uint32_pic_height"
    uint32 pic_flag = 3; // "uint32_pic_flag"
    uint32 busi_type = 4; // "uint32_busi_type"
    uint32 src_term = 5; // "uint32_src_term"
    uint32 plat_type = 6; // "uint32_plat_type"
    uint32 net_type = 7; // "uint32_net_type"
    uint32 img_type = 8; // "uint32_img_type"
    uint32 app_pic_type = 9; // "uint32_app_pic_type"
    bytes echo_created_by_server = 10; // "bytes_echo_created_by_server"
    uint64 qqmeet_guild_id = 11; // "uint64_qqmeet_guild_id"
    uint64 qqmeet_channel_id = 12; // "uint64_qqmeet_channel_id"
  }
  // PicRspExtInfo
  message PicRspExtInfo {
    bytes skey = 1; // "bytes_skey"
    uint32 client_ip = 2; // "uint32_client_ip"
    uint64 up_offset = 3; // "uint64_up_offset"
    uint64 block_size = 4; // "uint64_block_size"
  }
  // QueryHoleRsp
  message QueryHole {
    uint32 result = 1; // "uint32_result"
    repeated DataHole data_hole = 2; // "rpt_data_hole"
    bool comp_flag = 3; // "bool_comp_flag"
  }
  // ReqDataHighwayHead
  message RequestHead {
    BaseHead base_head = 1; // "msg_basehead"
    SegmentHead segment_head = 2; // "msg_seghead"
    bytes extend_info = 3; // "bytes_req_extendinfo"
    uint64 timestamp = 4; // "uint64_timestamp"
    LoginSigHead login_sig_head = 5; // "msg_login_sig_head"
  }
  // RspBody
  message ResponseBody {
    QueryHole query_hole = 1; // "msg_query_hole_rsp"
  }
  // RspDataHighwayHead
  message ResponseHead {
    BaseHead base_head = 1; // "msg_basehead"
    SegmentHead segment_head = 2; // "msg_seghead"
    uint32 error_code = 3; // "uint32_error_code"
    uint32 allow_retry = 4; // "uint32_allow_retry"
    uint32 cache_cost = 5; // "uint32_cachecost"
    uint32 ht_cost = 6; // "uint32_htcost"
    bytes extend_info = 7; // "bytes_rsp_extendinfo"
    uint64 timestamp = 8; // "uint64_timestamp"
    uint64 range = 9; // "uint64_range"
    uint32 is_reset = 10; // "uint32_is_reset"
  }
  // SegHead
  message SegmentHead {
    uint32 service_id = 1; // "uint32_serviceid"
    uint64 file_size = 2; // "uint64_filesize"
    uint64 data_offset = 3; // "uint64_dataoffset"
    uint32 data_length = 4; // "uint32_datalength"
    uint32 return_code = 5; // "uint32_rtcode"
    bytes service_ticket = 6; // "bytes_serviceticket"
    uint32 flag = 7; // "uint32_flag"
    bytes md5 = 8; // "bytes_md5"
    bytes file_md5 = 9; // "bytes_file_md5"
    uint32 cache_address = 10; // "uint32_cache_addr"
    uint32 query_times = 11; // "uint32_query_times"
    uint32 update_cache_ip = 12; // "uint32_update_cacheip"
    uint32 cache_port = 13; // "uint32_cache_port"
  }
}
